texi2html/test/invalid/res/texi_tex_not_closed/tex_not_closed.passfirst
tex_not_closed.texi(,2) 
tex_not_closed.texi(,3) @node Top
tex_not_closed.texi(,4) 
tex_not_closed.texi(,5) texte
tex_not_closed.texi(,6) 
no file(,) @special_tex_1{}